Ensure that xdgActivationTokenArrived is always emitted asynchronously

Otherwise consumers that expect it to be async break

BUG: 450342